<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.tm_synchronizer.ecobinmobileappv10.ui.activity.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/eco_bin_logo"
        android:layout_width="@dimen/ecobin_logo"
        android:layout_height="@dimen/ecobin_logo"
        android:layout_marginTop="@dimen/forget_password_margin_10dp"
        android:src="@drawable/ic_eco_bin_logo" />

    <TextView
        android:id="@+id/reset_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/forget_password_lbl_margin_bottom"
        android:text="@string/create_new_password_lbl"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/forget_password_lbl_text"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/new_password_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_password"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/new_password_lbl"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDarkGreen"
            android:hint="New Password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/re-enter_new_password_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_password_reenter"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/reEnter_new_password_lbl"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDarkGreen"
            android:hint="Re-enter password"
            android:inputType="textPassword" />

    </LinearLayout>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forget_password_margin_20dp"
            android:background="@drawable/login_button_shadow"
            android:text="@string/create_new_password_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"/>


</LinearLayout>