<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.tm_synchronizer.ecobinmobileappv10.ui.activity.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/eco_bin_logo"
        android:layout_width="@dimen/ecobin_logo"
        android:layout_height="@dimen/ecobin_logo"
        android:layout_marginTop="@dimen/forget_password_margin_10dp"
        android:src="@drawable/ic_eco_bin_logo" />

    <TextView
        android:id="@+id/confirm_verification_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/forget_password_lbl_margin_bottom"
        android:text="@string/confirm_verification"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/forget_password_lbl_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirm_verification_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/forget_password_margin_10dp"
        android:layout_marginRight="@dimen/forget_password_margin_10dp"
        android:layout_marginTop="@dimen/forget_password_margin_20dp"
        android:gravity="center"
        android:text="@string/confirm_verification_code"
        android:textColor="@color/colorBlack" />


    <EditText
        android:id="@+id/verification_code_lbl"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/forget_password_margin_30dp"
        android:layout_marginRight="@dimen/forget_password_margin_30dp"
        android:layout_marginTop="@dimen/forget_password_margin_20dp"
        android:backgroundTint="@color/colorDarkGreen"
        android:hint="Verification Code"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/resend_verification_code_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/login_button_shadow"
            android:text="@string/resend_verification_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/confirm_verification_send_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forget_password_margin_20dp"
            android:background="@drawable/login_button_shadow"
            android:text="@string/confirm_verification_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>


</LinearLayout>