<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.tm_synchronizer.ecobinmobileappv10.ui.activity.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/eco_bin_logo"
        android:layout_width="@dimen/ecobin_logo"
        android:layout_height="@dimen/ecobin_logo"
        android:layout_marginTop="@dimen/forget_password_margin_10dp"
        android:src="@drawable/ic_eco_bin_logo" />

    <TextView
        android:id="@+id/forget_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/forget_password_lbl_margin_bottom"
        android:text="@string/forget_password"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/forget_password_lbl_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forget_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/forget_password_margin_10dp"
        android:layout_marginRight="@dimen/forget_password_margin_10dp"
        android:layout_marginTop="@dimen/forget_password_margin_20dp"
        android:gravity="center"
        android:text="@string/forget_password_text"
        android:textColor="@color/colorBlack" />


    <EditText
        android:id="@+id/mobileNo_lbl"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/forget_password_margin_30dp"
        android:layout_marginRight="@dimen/forget_password_margin_30dp"
        android:layout_marginTop="@dimen/forget_password_margin_20dp"
        android:backgroundTint="@color/colorDarkGreen"
        android:hint="Mobile No"
        android:inputType="number"/>

    <Button
        android:id="@+id/forget_password_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forget_password_margin_20dp"
        android:background="@drawable/login_button_shadow"
        android:text="@string/forget_password_send_txt"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

</LinearLayout>
