<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".ui.activity.EditUserProfileActivity"
    tools:showIn="@layout/activity_edit_user_profile"
    android:padding="5dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/user_profile"
                    android:layout_width="400dp"
                    android:layout_height="220dp"
                    android:src="@drawable/ic_user_profile"
                    android:backgroundTint="@color/colorWhite"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/add_new_profile_pic_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_alignBottom="@id/user_profile"
                    android:layout_alignEnd="@+id/user_profile"
                    android:src="@drawable/ic_add"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile_user_name_edit_text"
                    android:textSize="15sp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/username_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="left"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_border" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile_address_edit_text"
                    android:textSize="15sp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/address_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="left"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_border" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address_edit_text"
                    android:textSize="15sp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="left"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_border" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_no_edit_text"
                    android:textSize="15sp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/mobile_no_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="left"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_border" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
`
                <Button
                    android:id="@+id/create_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorLightGreen"
                    android:background="@drawable/button_drawable"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

            </LinearLayout>

    </ScrollView>

</LinearLayout>